# dyson-sphere-facts

./: .gitignore  0912archreport.md  CLAUDE.md  DEPLOYMENT.md  DMAP.md  ENV-SETUP.md  EXAMPLE_QUERIES.md  ORCHESTRATION_ROADMAP.md  README-COMPLETE.md  README.md  SETUP.md  TROUBLESHOOTING.md  architecture-analysis-sept15.md  build-verification.sh  clean-env.sh  coderabbit.yaml  pyproject.toml  restart.sh  scrape-docs.sh  setup.sh  start.sh  test-agent-queries.sh  test-setup.sh  validate-test-suite.sh
.claude/agents/: dyson-codebase-arch.md  dyson-codebase-archv1.txt  dyson-test-agent.md
.kilocode/: mcp.json
claudable/: config.json  index.js  package-lock.json  package.json  test.js
claudable/public/: index.html
docker/: docker-compose.yml  health-check.sh  manage-mcp.sh  mcp-query.sh  package.json  rag-http-wrapper.js  search-http-wrapper.js  validate-infrastructure.sh
docker/docs/agent_specs/: AGENT_SPEC_V6.md  dsp-agent-prd-updated.md  template_arch_agent.md  template_test_agentv3.md
docker/qdrant_storage/: raft_state.json
docs/: dyson-repomix-output.xml
docs/agent_specs/: dsp-agent-prd.md  template_arch_agent.md  template_test_agentv3.md
docs/tasks/: TASKS-COMPLETE.md  dsp-task-list.md  overall-dsp-tasks.md
n8n/: dsp-agent-workflow.json
tasks/: dsp-task-list-VM.md  dsp-task-list.md  tasks-dsp-agent-implementation.md
tests/: README.md  __init__.py  conftest.py  run_all_tests.py  test_critical.py  test_documentation_performance.py  test_integration_e2e.py  test_markdown_code_blocks.py  test_troubleshooting_md.py
tools/: docker-enum.sh
(+4 files in other folders)
