[project]
name = "dyson-sphere-facts"
version = "0.1.0"
description = "DSP Documentation & Physics Speculation Agent with real-data test framework"
authors = [{name = "DSP Test Agent", email = "test@dsp-agent.local"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.25.0",
    "asyncio>=3.4.3"
]

[tool.poetry]
packages = [{include = "tests"}]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.25.0"
asyncio = "^3.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
ruff = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "W", "C", "N"]
ignore = []